fix[FE]: Style broken layouts

--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -16,6 +16,11 @@
 @tailwind components;
 
 @layer components {
+  .header {
+    @apply container mx-auto max-w-xl;
+    @apply fixed top-0 left-0 right-0;
+    @apply backdrop-blur-md bg-gray-darker/50 z-50;
+  }
   .vh-center {
     @apply flex items-center justify-center;
   }
